--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ color: black;
   max-width: 370px;
 }
 
-.light-theme .ticket-title {
+.ticket-title {
 font-family: 'Playfair Display', serif;
 text-align: center;
 padding: 0;
